--- a/discography.html
+++ b/discography.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/modal-video.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
+  <script src="https://kit.fontawesome.com/63f6606447.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page">
@@ -41,7 +42,7 @@
             <div class="release-info-cover">
               <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/cover.png">
                 <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
-                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
               </a>
               <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside.jpg" style="display: none;">
                 <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
@@ -55,15 +56,44 @@
             </div>
             <div class="release-info-desc">
               <ol>
-                <li>359 <span class="duration">05:12</span></li>
-                <li>31-05 part1 <span class="duration">07:11</span></li>
-                <li>Cosm <span class="duration">04:16</span></li>
-                <li>Bicycle Rally <span class="duration">03:41</span></li>
-                <li>9-11 part1 <span class="duration">04:49</span></li>
-                <li>9-11 part2 <span class="duration">03:05</span></li>
-                <li>Declann <span class="duration">04:32</span></li>
-                <li>31-05 part2 <span class="duration">07:48</span></li>
-                <li>PS Happy Birthday <span class="duration">04:09</span></li>
+                <li class="release-play-button">
+                  <a data-video-id="KXmhltTxwOk" href="#">
+                    <span class="release-info-track">359</span>
+                    <span class="release-info-duration">05:12</span>
+                  </a>
+                </li>
+                <li>
+                  <span class="release-info-track">31-05 part1</span>
+                  <span class="release-info-duration">07:11</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Cosm</span>
+                  <span class="release-info-duration">04:16</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Bicycle Rally</span>
+                  <span class="release-info-duration">03:41</span>
+                </li>
+                <li>
+                  <span class="release-info-track">9-11 part1</span>
+                  <span class="release-info-duration">04:49</span>
+                </li>
+                <li>
+                  <span class="release-info-track">9-11 part2</span>
+                  <span class="release-info-duration">03:05</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Declann</span>
+                  <span class="release-info-duration">04:32</span>
+                </li>
+                <li>
+                  <span class="release-info-track">31-05 part2</span>
+                  <span class="release-info-duration">07:48</span>
+                </li>
+                <li>
+                  <span class="release-info-track">PS Happy Birthday</span>
+                  <span class="release-info-duration">04:09</span>
+                </li>
               </ol>
               <p class="release-info-text">9 tracks, 43:23</p>
             </div>
@@ -77,8 +107,14 @@
             <div class="release-footer-download">
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
-                <a href="https://twowintersonly.bandcamp.com/album/359"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
-                <a href="https://music.yandex.ru/album/15908024"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
+                <a href="https://twowintersonly.bandcamp.com/album/359">
+                  <i class="fa-brands fa-bandcamp"></i>
+                  <span class="release-footer-download-brand">bandcamp</span>
+                </a>
+                <a href="https://music.yandex.ru/album/15908024">
+                  <i class="fa-brands fa-yandex-international"></i>
+                  <span class="release-footer-download-brand">yandex</span>
+                </a>
               </div>
             </div>
           </div>
@@ -92,7 +128,7 @@
             <div class="release-info-cover">
               <a data-fancybox="bitsa-gallery" data-caption="Bitsa EP, 2016" href="images/bitsa/cover.png">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
-                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
               </a>
               <a data-fancybox="bitsa-gallery" data-caption="Bitsa EP, 2016" href="images/bitsa/inside.png" style="display: none;">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
@@ -103,9 +139,20 @@
             </div>
             <div class="release-info-desc">
               <ol>
-                <li>Messe <span class="duration">7:15</span></li>
-                <li>Recap <span class="duration">7:25</span></li>
-                <li>Withered Apples <span class="duration">5:40</span></li>
+                <li class="release-play-button">
+                  <a data-video-id="LTWcLZ8LloU" href="#">
+                    <span class="release-info-track">Messe</span>
+                    <span class="release-info-duration">7:15</span>
+                  </a>
+                </li>
+                <li>
+                  <span class="release-info-track">Recap</span>
+                  <span class="release-info-duration">7:25</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Withered Apples</span>
+                  <span class="release-info-duration">5:40</span>
+                </li>
               </ol>
               <p class="release-info-text">3 tracks, 20:20</p>
             </div>
@@ -119,7 +166,10 @@
             <div class="release-footer-download">
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
-                <a href="https://twowintersonly.bandcamp.com/album/bitsa-ep"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
+                <a href="https://twowintersonly.bandcamp.com/album/bitsa-ep">
+                  <i class="fa-brands fa-bandcamp"></i>
+                  <span class="release-footer-download-brand">bandcamp</span>
+                </a>
               </div>
             </div>
           </div>
@@ -133,15 +183,29 @@
             <div class="release-info-cover">
               <a data-fancybox data-caption="The Room EP, 2014" href="images/room/cover.png">
                 <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
-                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
               </a>
             </div>
             <div class="release-info-desc">
               <ol>
-                <li>Rabbit's Clock Pointer <span class="duration">2:58</span></li>
-                <li>17 (...try To Become That Shape) <span class="duration">6:13</span></li>
-                <li>Rectifier <span class="duration">9:51</span></li>
-                <li>Open Door <span class="duration">6:56</span></li>
+                <li class="release-play-button">
+                  <a data-video-id="FNIFhPkYdzI" href="#">
+                    <span class="release-info-track">Rabbit's Clock Pointer</span>
+                    <span class="release-info-duration">2:58</span>
+                  </a>
+                </li>
+                <li>
+                  <span class="release-info-track">17 (...try To Become That Shape)</span>
+                  <span class="release-info-duration">6:13</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Rectifier</span>
+                  <span class="release-info-duration">9:51</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Open Door</span>
+                  <span class="release-info-duration">6:56</span>
+                </li>
               </ol>
               <p class="release-info-text">4 tracks, 26:00</p>
             </div>
@@ -155,8 +219,14 @@
             <div class="release-footer-download">
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
-                <a href="https://twowintersonly.bandcamp.com/album/the-room-ep"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
-                <a href="https://music.yandex.ru/album/17098995"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
+                <a href="https://twowintersonly.bandcamp.com/album/the-room-ep">
+                  <i class="fa-brands fa-bandcamp"></i>
+                  <span class="release-footer-download-brand">bandcamp</span>
+                </a>
+                <a href="https://music.yandex.ru/album/17098995">
+                  <i class="fa-brands fa-yandex-international"></i>
+                  <span class="release-footer-download-brand">yandex</span>
+                </a>
               </div>
             </div>
           </div>
@@ -170,7 +240,7 @@
             <div class="release-info-cover">
               <a data-fancybox="two-gallery" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
                 <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
-                <i class="fa fa-search-plus" aria-hidden="true"></i>
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
               </a>
               <a data-fancybox="two-gallery" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-back.jpg" style="display: none;">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
@@ -178,15 +248,44 @@
             </div>
             <div class="release-info-desc">
               <ol>
-                <li>Intro <span class="duration">3:58</span></li>
-                <li>Winter Shades <span class="duration">4:11</span></li>
-                <li>Night Aquatic Ropes <span class="duration">5:57</span></li>
-                <li>Spring <span class="duration">4:55</span></li>
-                <li>Spokes & Wheels <span class="duration">4:37</span></li>
-                <li>Excuse for The Pain <span class="duration">5:41</span></li>
-                <li>13 <span class="duration">3:40</span></li>
-                <li>Last Rime <span class="duration">4:14</span></li>
-                <li>Outro <span class="duration">5:12</span></li>
+                <li>
+                  <span class="release-info-track">Intro</span>
+                  <span class="release-info-duration">3:58</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Winter Shades</span>
+                  <span class="release-info-duration">4:11</span>
+                </li>
+                <li class="release-play-button">
+                  <a data-video-id="vGdYeTyj9Jc" href="#">
+                    <span class="release-info-track">Night Aquatic Ropes</span>
+                    <span class="release-info-duration">5:57</span>
+                  </a>
+                </li>
+                <li>
+                  <span class="release-info-track">Spring</span>
+                  <span class="release-info-duration">4:55</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Spokes & Wheels</span>
+                  <span class="release-info-duration">4:37</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Excuse for The Pain</span>
+                  <span class="release-info-duration">5:41</span>
+                </li>
+                <li>
+                  <span class="release-info-track">13</span>
+                  <span class="release-info-duration">3:40</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Last Rime</span>
+                  <span class="release-info-duration">4:14</span>
+                </li>
+                <li>
+                  <span class="release-info-track">Outro</span>
+                  <span class="release-info-duration">5:12</span>
+                </li>
               </ol>
               <p class="release-info-text">9 tracks, 42:28</p>
             </div>
@@ -195,10 +294,22 @@
             <div class="release-footer-download">
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
-                <a href="https://twowintersonly.bandcamp.com/album/two-winters-only"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
-                <a href="https://music.yandex.ru/album/3518512"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
-                <a href="https://itunes.apple.com/us/album/two-winters-only/id1118117191"><i class="fa fa-apple" aria-hidden="true"></i> music</a>
-                <a href="https://play.google.com/store/music/album/Two_Winters_Only_Two_Winters_Only?id=Bvwfjegzsqcz4hmrcxeyhdvux7a"><i class="fa fa-android" aria-hidden="true"></i> play</a>
+                <a href="https://twowintersonly.bandcamp.com/album/two-winters-only">
+                  <i class="fa-brands fa-bandcamp"></i>
+                  <span class="release-footer-download-brand">bandcamp</span>
+                </a>
+                <a href="https://music.yandex.ru/album/3518512">
+                  <i class="fa-brands fa-yandex-international"></i>
+                  <span class="release-footer-download-brand">yandex</span>
+                </a>
+                <a href="https://itunes.apple.com/us/album/two-winters-only/id1118117191">
+                  <i class="fa-brands fa-apple"></i>
+                  <span class="release-footer-download-brand">music</span>
+                </a>
+                <a href="https://play.google.com/store/music/album/Two_Winters_Only_Two_Winters_Only?id=Bvwfjegzsqcz4hmrcxeyhdvux7a">
+                  <i class="fa-brands fa-google-play"></i>
+                  <span class="release-footer-download-brand">play</span>
+                </a>
               </div>
             </div>
           </div>
