--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/modal-video.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
+  <script src="https://kit.fontawesome.com/63f6606447.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page">
@@ -47,18 +48,44 @@
                     </div>
                     <div class="release-info-desc">
                       <ol>
-                        <li><a class="release-play-button" data-video-id="KXmhltTxwOk" href="#">
-                          <i class="fa fa-play-circle" aria-hidden="true"></i>
-                          <span class="release-track">359</span>
-                        </a></li>
-                        <li>31-05 part1</li>
-                        <li>Cosm</li>
-                        <li>Bicycle Rally</li>
-                        <li>9-11 part1</li>
-                        <li>9-11 part2</li>
-                        <li>Declann</li>
-                        <li>31-05 part2</li>
-                        <li>PS Happy Birthday</li>
+                        <li class="release-play-button">
+                          <a data-video-id="KXmhltTxwOk" href="#">
+                            <span class="release-info-track">359</span>
+                            <span class="release-info-duration">05:12</span>
+                          </a>
+                        </li>
+                        <li>
+                          <span class="release-info-track">31-05 part1</span>
+                          <span class="release-info-duration">07:11</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Cosm</span>
+                          <span class="release-info-duration">04:16</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Bicycle Rally</span>
+                          <span class="release-info-duration">03:41</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">9-11 part1</span>
+                          <span class="release-info-duration">04:49</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">9-11 part2</span>
+                          <span class="release-info-duration">03:05</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Declann</span>
+                          <span class="release-info-duration">04:32</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">31-05 part2</span>
+                          <span class="release-info-duration">07:48</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">PS Happy Birthday</span>
+                          <span class="release-info-duration">04:09</span>
+                        </li>
                       </ol>
                     </div>
                   </div>
@@ -79,14 +106,20 @@
                     </div>
                     <div class="release-info-desc">
                       <ol>
-                        <li>
-                          <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
-                            <i class="fa fa-play-circle" aria-hidden="true"></i>
-                            <span class="release-track">Messe</span>
+                        <li class="release-play-button">
+                          <a data-video-id="LTWcLZ8LloU" href="#">
+                            <span class="release-info-track">Messe</span>
+                            <span class="release-info-duration">7:15</span>
                           </a>
                         </li>
-                        <li>Recap</li>
-                        <li>Withered Apples</li>
+                        <li>
+                          <span class="release-info-track">Recap</span>
+                          <span class="release-info-duration">7:25</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Withered Apples</span>
+                          <span class="release-info-duration">5:40</span>
+                        </li>
                       </ol>
                     </div>
                   </div>
@@ -107,15 +140,24 @@
                     </div>
                     <div class="release-info-desc">
                       <ol>
-                        <li>
-                          <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
-                            <i class="fa fa-play-circle" aria-hidden="true"></i>
-                            <span class="release-track">Rabbit's Clock Pointer</span>
+                        <li class="release-play-button">
+                          <a data-video-id="FNIFhPkYdzI" href="#">
+                            <span class="release-info-track">Rabbit's Clock Pointer</span>
+                            <span class="release-info-duration">2:58</span>
                           </a>
                         </li>
-                        <li>17 (...try To Become That Shape)</li>
-                        <li>Rectifier</li>
-                        <li>Open Door</li>
+                        <li>
+                          <span class="release-info-track">17 (...try To Become That Shape)</span>
+                          <span class="release-info-duration">6:13</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Rectifier</span>
+                          <span class="release-info-duration">9:51</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Open Door</span>
+                          <span class="release-info-duration">6:56</span>
+                        </li>
                       </ol>
                     </div>
                   </div>
@@ -135,20 +177,44 @@
                     </div>
                     <div class="release-info-desc">
                       <ol>
-                        <li>Intro</li>
-                        <li>Winter Shades</li>
                         <li>
-                          <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
-                            <i class="fa fa-play-circle" aria-hidden="true"></i>
-                            <span class="release-track">Night Aquatic Ropes</span>
+                          <span class="release-info-track">Intro</span>
+                          <span class="release-info-duration">3:58</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Winter Shades</span>
+                          <span class="release-info-duration">4:11</span>
+                        </li>
+                        <li class="release-play-button">
+                          <a data-video-id="vGdYeTyj9Jc" href="#">
+                            <span class="release-info-track">Night Aquatic Ropes</span>
+                            <span class="release-info-duration">5:57</span>
                           </a>
                         </li>
-                        <li>Spring</li>
-                        <li>Spokes & Wheels</li>
-                        <li>Excuse for The Pain</li>
-                        <li>13</li>
-                        <li>Last Rime</li>
-                        <li>Outro</li>
+                        <li>
+                          <span class="release-info-track">Spring</span>
+                          <span class="release-info-duration">4:55</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Spokes & Wheels</span>
+                          <span class="release-info-duration">4:37</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Excuse for The Pain</span>
+                          <span class="release-info-duration">5:41</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">13</span>
+                          <span class="release-info-duration">3:40</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Last Rime</span>
+                          <span class="release-info-duration">4:14</span>
+                        </li>
+                        <li>
+                          <span class="release-info-track">Outro</span>
+                          <span class="release-info-duration">5:12</span>
+                        </li>
                       </ol>
                     </div>
                   </div>
