--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/modal-video.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
+  <script src="https://kit.fontawesome.com/63f6606447.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page">
