Update footer add Yandex

--- a/contact.html
+++ b/contact.html
@@ -42,22 +42,39 @@
     <footer class="footer">
       <ul class="social">
         <li class="social-item">
-          <a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true" title="YouTube"></a>
+          <a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" title="YouTube">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
         </li>
         <li class="social-item">
-          <a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true" title="Facebook"></a>
+          <a href="https://www.facebook.com/twowintersonlymusic" title="Facebook">
+            <i class="fa-brands fa-facebook-square"></i>
+          </a>
         </li>
         <li class="social-item">
-          <a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true" title="LastFM"></a>
+          <a href="https://www.last.fm/music/Two+Winters+Only" title="LastFM">
+            <i class="fa-brands fa-lastfm"></i>
+          </a>
         </li>
         <li class="social-item">
-          <a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true" title="Soundcloud"></a>
+          <a href="https://soundcloud.com/twowintersonly" title="Soundcloud">
+            <i class="fa-brands fa-soundcloud"></i>
+          </a>
         </li>
         <li class="social-item">
-          <a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true" title="VK"></a>
+          <a href="https://vk.com/twowintersonly" title="VK">
+            <i class="fa-brands fa-vk"></i>
+          </a>
         </li>
         <li class="social-item">
-          <a href="https://twowintersonly.bandcamp.com" class="fa fa-bandcamp" aria-hidden="true" title="Bandcamp"></a>
+          <a href="https://music.yandex.ru/artist/4414799" title="Yandex">
+            <i class="fa-brands fa-yandex-international"></i>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="https://twowintersonly.bandcamp.com" title="Bandcamp">
+            <i class="fa-brands fa-bandcamp"></i>
+          </a>
         </li>
       </ul>
     </footer>
