--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,6 @@
         <a href="/">Two Winters Only</a>
       </div>
       <p class="header-title">post-metal duet from Pushchino, Russia</p>
-      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
     </header>
     <nav class="nav">
       <ul class="nav-list">
@@ -31,9 +30,9 @@
       </ul>
     </nav>
     <main class="main">
-      <article class="article contact">
-        <h2>Contact</h2>
-        <p>
+      <article class="article">
+        <h2 class="article-title">Contact</h2>
+        <p class="article-text">
           <strong>Sergey Zhirkov</strong><br>
           <a href="mailto:whatisityouhopefor@gmail.com">whatisityouhopefor@gmail.com</a>
         </p>
@@ -82,7 +81,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
