--- a/discography.html
+++ b/discography.html
@@ -20,7 +20,6 @@
         <a href="/">Two Winters Only</a>
       </div>
       <p class="header-title">post-metal duet from Pushchino, Russia</p>
-      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
     </header>
     <nav class="nav">
       <ul class="nav-list">
@@ -31,11 +30,11 @@
       </ul>
     </nav>
     <main class="main">
-      <article class="article discography">
-        <h2>Discography</h2>
+      <article class="article">
+        <h1 class="article-title">Discography</h1>
         <div class="release">
           <div class="release-header">
-            <h2 class="release-title" id="359">359</h2>
+            <h2 class="release-title">359</h2>
             <p class="release-additional">post-metal, 2021</p>
           </div>
           <div class="release-info">
@@ -55,42 +54,42 @@
               </a>
             </div>
             <div class="release-info-desc">
-              <ol>
-                <li class="release-play-button">
+              <ol class="release-info-list">
+                <li class="release-info-item release-play-button">
                   <a data-video-id="KXmhltTxwOk" href="#">
                     <span class="release-info-track">359</span>
                     <span class="release-info-duration">05:12</span>
                   </a>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">31-05 part1</span>
                   <span class="release-info-duration">07:11</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Cosm</span>
                   <span class="release-info-duration">04:16</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Bicycle Rally</span>
                   <span class="release-info-duration">03:41</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">9-11 part1</span>
                   <span class="release-info-duration">04:49</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">9-11 part2</span>
                   <span class="release-info-duration">03:05</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Declann</span>
                   <span class="release-info-duration">04:32</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">31-05 part2</span>
                   <span class="release-info-duration">07:48</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">PS Happy Birthday</span>
                   <span class="release-info-duration">04:09</span>
                 </li>
@@ -121,7 +120,7 @@
         </div>
         <div class="release">
           <div class="release-header">
-            <h2 class="release-title" id="bitsa">Bitsa EP</h2>
+            <h2 class="release-title">Bitsa EP</h2>
             <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
           </div>
           <div class="release-info">
@@ -138,18 +137,18 @@
               </a>
             </div>
             <div class="release-info-desc">
-              <ol>
-                <li class="release-play-button">
+              <ol class="release-info-list">
+                <li class="release-info-item release-play-button">
                   <a data-video-id="LTWcLZ8LloU" href="#">
                     <span class="release-info-track">Messe</span>
                     <span class="release-info-duration">7:15</span>
                   </a>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Recap</span>
                   <span class="release-info-duration">7:25</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Withered Apples</span>
                   <span class="release-info-duration">5:40</span>
                 </li>
@@ -176,7 +175,7 @@
         </div>
         <div class="release">
           <div class="release-header">
-            <h2 class="release-title" id="room">The Room EP</h2>
+            <h2 class="release-title">The Room EP</h2>
             <p class="release-additional">post-metal, post-rock, 2014</p>
           </div>
           <div class="release-info">
@@ -187,22 +186,22 @@
               </a>
             </div>
             <div class="release-info-desc">
-              <ol>
-                <li class="release-play-button">
+              <ol class="release-info-list">
+                <li class="release-info-item release-play-button">
                   <a data-video-id="FNIFhPkYdzI" href="#">
                     <span class="release-info-track">Rabbit's Clock Pointer</span>
                     <span class="release-info-duration">2:58</span>
                   </a>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">17 (...try To Become That Shape)</span>
                   <span class="release-info-duration">6:13</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Rectifier</span>
                   <span class="release-info-duration">9:51</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Open Door</span>
                   <span class="release-info-duration">6:56</span>
                 </li>
@@ -233,7 +232,7 @@
         </div>
         <div class="release">
           <div class="release-header">
-            <h2 class="release-title" id="two">Two Winters Only (self-titled)</h2>
+            <h2 class="release-title">Two Winters Only (self-titled)</h2>
             <p class="release-additional">post-metal, 2010</p>
           </div>
           <div class="release-info">
@@ -247,42 +246,42 @@
               </a>
             </div>
             <div class="release-info-desc">
-              <ol>
-                <li>
+              <ol class="release-info-list">
+                <li class="release-info-item">
                   <span class="release-info-track">Intro</span>
                   <span class="release-info-duration">3:58</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Winter Shades</span>
                   <span class="release-info-duration">4:11</span>
                 </li>
-                <li class="release-play-button">
+                <li class="release-info-item release-play-button">
                   <a data-video-id="vGdYeTyj9Jc" href="#">
                     <span class="release-info-track">Night Aquatic Ropes</span>
                     <span class="release-info-duration">5:57</span>
                   </a>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Spring</span>
                   <span class="release-info-duration">4:55</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Spokes & Wheels</span>
                   <span class="release-info-duration">4:37</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Excuse for The Pain</span>
                   <span class="release-info-duration">5:41</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">13</span>
                   <span class="release-info-duration">3:40</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Last Rime</span>
                   <span class="release-info-duration">4:14</span>
                 </li>
-                <li>
+                <li class="release-info-item">
                   <span class="release-info-track">Outro</span>
                   <span class="release-info-duration">5:12</span>
                 </li>
@@ -359,7 +358,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
