--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About — Two Winters Only</title>
+  <title>About band — Two Winters Only</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Two Winters Only. Post-metal duet from Pushchino, Russia.">
@@ -20,7 +20,6 @@
         <a href="/">Two Winters Only</a>
       </div>
       <p class="header-title">post-metal duet from Pushchino, Russia</p>
-      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
     </header>
     <nav class="nav">
       <ul class="nav-list">
@@ -31,10 +30,13 @@
       </ul>
     </nav>
     <main class="main">
-      <article class="article about">
-        <h2>About</h2>
+      <article class="article">
+        <h1 class="article-title">About band</h1>
         <img src="images/card.jpg" alt="Two Winters Only" class="article-img">
-        <p>More info coming soon...</p>
+        <p class="article-text">
+          Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes.<br>
+          The band defines their style as “post-metal with non-metal attitude”.
+        </p>
       </article>
     </main>
     <footer class="footer">
@@ -80,7 +82,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
