--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <header class="header">
       <h1 class="header-logo">Two Winters Only</h1>
       <p class="header-title">post-metal duet from Pushchino, Russia</p>
-      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
     </header>
     <nav class="nav">
       <ul class="nav-list">
@@ -29,211 +28,95 @@
       </ul>
     </nav>
     <main class="main">
-      <div class="slides">
-        <div class="glide">
-          <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-              <li class="glide__slide">
-                <div class="release">
-                  <div class="release-header">
-                    <p class="release-caption">Last release</p>
-                    <h2 class="release-title">359</h2>
-                    <p class="release-additional">post-rock, industrial rock, post-metal, drone, 2021</p>
-                  </div>
-                  <div class="release-info">
-                    <div class="release-info-cover">
-                      <a class="release-link" href="discography.html#359">
-                        <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
-                      </a>
-                    </div>
-                    <div class="release-info-desc">
-                      <ol>
-                        <li class="release-play-button">
-                          <a data-video-id="KXmhltTxwOk" href="#">
-                            <span class="release-info-track">359</span>
-                            <span class="release-info-duration">05:12</span>
-                          </a>
-                        </li>
-                        <li>
-                          <span class="release-info-track">31-05 part1</span>
-                          <span class="release-info-duration">07:11</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Cosm</span>
-                          <span class="release-info-duration">04:16</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Bicycle Rally</span>
-                          <span class="release-info-duration">03:41</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">9-11 part1</span>
-                          <span class="release-info-duration">04:49</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">9-11 part2</span>
-                          <span class="release-info-duration">03:05</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Declann</span>
-                          <span class="release-info-duration">04:32</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">31-05 part2</span>
-                          <span class="release-info-duration">07:48</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">PS Happy Birthday</span>
-                          <span class="release-info-duration">04:09</span>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="glide__slide">
-                <div class="release">
-                  <div class="release-header">
-                    <p class="release-caption">Release</p>
-                    <h2 class="release-title">Bitsa EP</h2>
-                    <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
-                  </div>
-                  <div class="release-info">
-                    <div class="release-info-cover">
-                      <a class="release-link" href="discography.html#bitsa">
-                        <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
-                      </a>
-                    </div>
-                    <div class="release-info-desc">
-                      <ol>
-                        <li class="release-play-button">
-                          <a data-video-id="LTWcLZ8LloU" href="#">
-                            <span class="release-info-track">Messe</span>
-                            <span class="release-info-duration">7:15</span>
-                          </a>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Recap</span>
-                          <span class="release-info-duration">7:25</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Withered Apples</span>
-                          <span class="release-info-duration">5:40</span>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="glide__slide">
-                <div class="release">
-                  <div class="release-header">
-                    <p class="release-caption">Release</p>
-                    <h2 class="release-title">The Room EP</h2>
-                    <p class="release-additional">post-metal, post-rock, 2014</p>
-                  </div>
-                  <div class="release-info">
-                    <div class="release-info-cover">
-                      <a class="release-link" href="discography.html#room">
-                        <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
-                      </a>
-                    </div>
-                    <div class="release-info-desc">
-                      <ol>
-                        <li class="release-play-button">
-                          <a data-video-id="FNIFhPkYdzI" href="#">
-                            <span class="release-info-track">Rabbit's Clock Pointer</span>
-                            <span class="release-info-duration">2:58</span>
-                          </a>
-                        </li>
-                        <li>
-                          <span class="release-info-track">17 (...try To Become That Shape)</span>
-                          <span class="release-info-duration">6:13</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Rectifier</span>
-                          <span class="release-info-duration">9:51</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Open Door</span>
-                          <span class="release-info-duration">6:56</span>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-              </li>
-              <li class="glide__slide">
-                <div class="release">
-                  <div class="release-header">
-                    <p class="release-caption">Release</p>
-                    <h2 class="release-title">Two Winters Only</h2>
-                    <p class="release-additional">post-metal, post-rock, electronic, 2010</p>
-                  </div>
-                  <div class="release-info">
-                    <div class="release-info-cover">
-                      <a class="release-link" href="discography.html#two">
-                        <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
-                      </a>
-                    </div>
-                    <div class="release-info-desc">
-                      <ol>
-                        <li>
-                          <span class="release-info-track">Intro</span>
-                          <span class="release-info-duration">3:58</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Winter Shades</span>
-                          <span class="release-info-duration">4:11</span>
-                        </li>
-                        <li class="release-play-button">
-                          <a data-video-id="vGdYeTyj9Jc" href="#">
-                            <span class="release-info-track">Night Aquatic Ropes</span>
-                            <span class="release-info-duration">5:57</span>
-                          </a>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Spring</span>
-                          <span class="release-info-duration">4:55</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Spokes & Wheels</span>
-                          <span class="release-info-duration">4:37</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Excuse for The Pain</span>
-                          <span class="release-info-duration">5:41</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">13</span>
-                          <span class="release-info-duration">3:40</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Last Rime</span>
-                          <span class="release-info-duration">4:14</span>
-                        </li>
-                        <li>
-                          <span class="release-info-track">Outro</span>
-                          <span class="release-info-duration">5:12</span>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
+      <article class="article">
+        <h2 class="article-caption">Latest release</h2>
+        <div class="release">
+          <div class="release-header">
+            <h2 class="release-title" id="359">359</h2>
+            <p class="release-additional">post-metal, 2021</p>
           </div>
-          <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
-          </div> 
-          <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide__bullet" data-glide-dir="=0"></button>
-            <button class="glide__bullet" data-glide-dir="=1"></button>
-            <button class="glide__bullet" data-glide-dir="=2"></button>
-            <button class="glide__bullet" data-glide-dir="=3"></button>
-          </div>       
+          <div class="release-info">
+            <div class="release-info-cover">
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/cover.png">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside1.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside2.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+            </div>
+            <div class="release-info-desc">
+              <ol class="release-info-list">
+                <li class="release-info-item release-play-button">
+                  <a data-video-id="KXmhltTxwOk" href="#">
+                    <span class="release-info-track">359</span>
+                    <span class="release-info-duration">05:12</span>
+                  </a>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">31-05 part1</span>
+                  <span class="release-info-duration">07:11</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">Cosm</span>
+                  <span class="release-info-duration">04:16</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">Bicycle Rally</span>
+                  <span class="release-info-duration">03:41</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">9-11 part1</span>
+                  <span class="release-info-duration">04:49</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">9-11 part2</span>
+                  <span class="release-info-duration">03:05</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">Declann</span>
+                  <span class="release-info-duration">04:32</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">31-05 part2</span>
+                  <span class="release-info-duration">07:48</span>
+                </li>
+                <li class="release-info-item">
+                  <span class="release-info-track">PS Happy Birthday</span>
+                  <span class="release-info-duration">04:09</span>
+                </li>
+              </ol>
+              <p class="release-info-text">9 tracks, 43:23</p>
+            </div>
+          </div>
+          <div class="release-footer">
+            <p class="release-footer-text">
+              Dedicated to our hometown of Pushchino. And also a reminder that you can't go back anywhere.<br>
+              Recorded and mixed at Aralot Studios.<br>
+              Mastered by James Plotkin.
+            </p>
+            <div class="release-footer-download">
+              <div class="release-footer-download-title">Download:</div>
+              <div class="release-footer-download-links">
+                <a href="https://twowintersonly.bandcamp.com/album/359">
+                  <i class="fa-brands fa-bandcamp"></i>
+                  <span class="release-footer-download-brand">bandcamp</span>
+                </a>
+                <a href="https://music.yandex.ru/album/15908024">
+                  <i class="fa-brands fa-yandex-international"></i>
+                  <span class="release-footer-download-brand">yandex</span>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </article>
     </main>
     <footer class="footer">
       <ul class="social">
@@ -278,7 +161,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
