Update footer and add social to contact

--- a/discography.html
+++ b/discography.html
@@ -316,43 +316,9 @@
       </article>
     </main>
     <footer class="footer">
-      <ul class="social">
-        <li class="social-item">
-          <a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" title="YouTube">
-            <i class="fa-brands fa-youtube"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://www.facebook.com/twowintersonlymusic" title="Facebook">
-            <i class="fa-brands fa-facebook-square"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://www.last.fm/music/Two+Winters+Only" title="LastFM">
-            <i class="fa-brands fa-lastfm"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://soundcloud.com/twowintersonly" title="Soundcloud">
-            <i class="fa-brands fa-soundcloud"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://vk.com/twowintersonly" title="VK">
-            <i class="fa-brands fa-vk"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://music.yandex.ru/artist/4414799" title="Yandex">
-            <i class="fa-brands fa-yandex-international"></i>
-          </a>
-        </li>
-        <li class="social-item">
-          <a href="https://twowintersonly.bandcamp.com" title="Bandcamp">
-            <i class="fa-brands fa-bandcamp"></i>
-          </a>
-        </li>
-      </ul>
+      <address class="footer-text">
+        © 2022 <a href="mailto:whatisityouhopefor@gmail.com">Two Winters Only</a>
+      </address>
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
