Minor fix for Article photo

--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
     <main class="main">
       <article class="article">
         <h1 class="article-title">About band</h1>
-        <img src="images/card.jpg" alt="Two Winters Only" class="article-img">
+        <div class="article-img">
+          <img src="images/card.jpg" alt="Two Winters Only">
+        </div>
         <p class="article-text">
           Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes.<br>
           The band defines their style as “post-metal with non-metal attitude”.
