--- a/index.html
+++ b/index.html
@@ -127,5 +127,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
+  <script>
+    $('a[data-video-id]').modalVideo();
+  </script>
 </body>
 </html>
