--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="keywords" content="Two Winters Only, TWO, Russian, post-metal, non-metal, Pushchino">
   <link rel="stylesheet" href="styles/style.css?v3">
   <link rel="stylesheet" href="styles/jquery.fancybox.css">
-  <link rel="stylesheet" href="styles/modal-video.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
   <script src="https://kit.fontawesome.com/63f6606447.js" crossorigin="anonymous"></script>
@@ -54,7 +53,7 @@
             <div class="release-info-desc">
               <ol class="release-info-list">
                 <li class="release-info-item release-play-button">
-                  <a data-video-id="KXmhltTxwOk" href="#">
+                  <a target="_blank" href="https://youtu.be/KXmhltTxwOk?feature=shared">
                     <span class="release-info-track">359</span>
                     <span class="release-info-duration">05:12</span>
                   </a>
@@ -126,9 +125,5 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery-modal-video.min.js"></script>
-  <script>
-    $('a[data-video-id]').modalVideo();
-  </script>
 </body>
 </html>
