--- a/discography.html
+++ b/discography.html
@@ -323,7 +323,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery-modal-video.min.js"></script>
+  <script src="js/jquery-modal-video.js"></script>
   <script>
     $('a[data-video-id]').modalVideo();
   </script>
